--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Optional: results from k6 runs
-# Uncomment if you don't want to track results.json
-# results.json
+# Results from k6 runs
+results.json
 
 # Reports directory
 reports/
